--- a/index.html
+++ b/index.html
@@ -65,6 +65,26 @@
         </div>
      </div>
 </div>
+ <div class="contrasting lil-box range">
+        <div class="box-container">
+            <h3>Contrast</h3>
+            <div class="input-box">
+                <input type="range"  name="range" type="range" min="0" max="100" value="0">
+                <output class="contrasting-output">0px</output>
+            </div>
+        </div>
+     </div>
+     <div class="saturation lil-box range">
+        <div class="box-container">
+            <h3>Saturation</h3>
+            <div class="input-box">
+                <input type="range"  name="range" type="range" min="0" max="100" value="0">
+                <output class="saturation-output">0px</output>
+            </div>
+        </div>
+     </div>
+</div>
+
 </body>
 <script src="./index.js"></script>
 </html>
